# tunetrove

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
apps/web/: .env.local.example  next.config.ts  package-lock.json  package.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/agent/[[...path]]/: route.ts
apps/web/components/: ChatMarkdown.tsx  ToolTrace.tsx
apps/web/lib/: agent-api.ts  parse-api-response.ts
docs/: BYOK.md  COSTS_AND_BILLING.md  DEPLOYMENT.md  FRONTEND_LANGCHAIN.md  GITHUB_AND_VERCEL.md  LAUNCH_CHECKLIST.md  RAILWAY.md  ROADMAP.md  V1_LITE_SPEC.md
scripts/: fix-dev-env.sh  kill-dev-ports.sh  smoke.sh  start-local.sh  stop-local.sh
skills/v1-lite-music/: SKILL.md
src/: __init__.py  main.py
src/agent/: __init__.py  factory.py
src/auth/: __init__.py  spotify_auth.py  user_llm_keys.py
src/tools/: __init__.py  spotify_context.py  spotify_tools.py  taste_memory.py  tavily_tools.py
src/web/: __init__.py  app.py
supabase/: taste_memory.sql  user_llm_keys.sql
